# siotman-experimental

./: .gitignore  build.gradle.kts  settings.gradle.kts
00_스터디/: settings.gradle.kts
00_스터디/도메인주도개발시작하기/: build.gradle.kts  settings.gradle.kts
01_막실험/: MixinImplKotlin.ipynb  test_wrong_charset.py
80_유틸리티/mac-initialization/: init-terminal.sh
99_휴지통/: build.gradle.kts
99_휴지통/_experimental/: build.gradle
99_휴지통/buildSrc/: build.gradle.kts  gradle.properties
99_휴지통/exp-mysql-read-phenomena/: README.md
99_휴지통/exp-python-cli/02_Typer+pacakaging/thello/: pyproject.toml
99_휴지통/exp-python-cli/02_Typer+pacakaging/thello/thello/: main.py
99_휴지통/lib-common/: build.gradle
99_휴지통/local-proxy/: README.md  package.json
99_휴지통/rss-scrap/: package.json
99_휴지통/spring-hot-swap/: gradle.properties
99_휴지통/도메인주도개발시작하기/: build.gradle.kts  settings.gradle.kts
_experimental/: build.gradle  settings.gradle
api-version-mapping/: build.gradle.kts  gradle.properties  settings.gradle.kts
buildSrc/: build.gradle.kts
encryption/: settings.gradle.kts
encryption/core/: build.gradle.kts
exp-avro/: build.gradle.kts  gradle.properties  settings.gradle.kts
exp-avro/story-persistence/: build.gradle.kts
exp-ktor-client/: build.gradle.kts  gradle.properties  settings.gradle.kts
exp-mysql-read-phenomena/: README.md  build.gradle.kts  settings.gradle.kts
gw-google-api/: build.gradle  settings.gradle
lib-common/: build.gradle
local-proxy/: index.js
rss-scrap/: .gitignore  package-lock.json
spring-hot-swap/: build.gradle.kts  settings.gradle.kts
(+122 files in other folders)
