[tool.poetry]
name = "thello"
version = "0.1.0"
description = ""
authors = ["siotman <siotman0728@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
thello = "thello.main:app"

[tool.poetry.dependencies]
python = "^3.6"
typer = {extras = ["all"], version = "^0.7.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
